--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -51,13 +51,8 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/java'
         androidTest {
-            resources.srcDirs += ['../identity-system-test-config']
+            resources.srcDirs += ['/var/anonyome_key', '../identity-system-test-config']
             assets.srcDirs += ['../identity-system-test-config']
-        }
-        main {
-            resources {
-                srcDirs 'src/main/resources', 'src/test/resources/'
-            }
         }
     }
 }
