--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.amazonaws.appsync'
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: "org.sonarqube"
@@ -13,7 +13,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
@@ -58,16 +58,36 @@ android {
 }
 
 dependencies {
+    def coroutine_version = "1.3.7"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+
+    implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:[2.16,)'
+    implementation 'com.amazonaws:aws-android-sdk-cognitoauth:[2.16,)'
+    implementation 'com.amazonaws:aws-android-sdk-core:[2.16,)'
+    implementation 'com.amazonaws:aws-android-sdk-appsync:[3.0,)'
+    implementation 'com.amazonaws:aws-android-sdk-s3:[2.16,)'
+
+    def kotlintest_version = "3.3.2"
+
+    testImplementation 'junit:junit:4.13'
+    testImplementation "io.kotlintest:kotlintest-assertions:$kotlintest_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
+    testImplementation 'org.mockito:mockito-core:2.27.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    testImplementation "org.powermock:powermock-module-junit4:2.0.2"
+    testImplementation "org.powermock:powermock-api-mockito2:2.0.2"
+    testImplementation 'org.json:json:20190722'
 
     // AWS SDKs.
     implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
     // Sudo Platform SDKs.
-    implementation 'com.sudoplatform:sudouser:[7.8.0,)'
-    implementation 'com.sudoplatform:keymanager:[3.3,)'
+    implementation 'com.sudoplatform:sudouser:8.0.5'
+    implementation 'com.sudoplatform:sudokeymanager:[3.4.2,)'
     implementation 'com.sudoplatform:sudologging:[1.0,)'
     implementation 'com.sudoplatform:sudoconfigmanager:[1.2.2,)'
     implementation 'com.sudoplatform:sudoapiclient:[1.4.0,)'
@@ -108,7 +128,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
 }
 
 task sourcesJar(type: Jar) {
-    archiveClassifier = 'sources'
+    archiveClassifier = "sources"
     from android.sourceSets.main.java.srcDirs
 }
 
