--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
     ext.dokka_version = "0.10.1"
 
     repositories {
+        maven { url "https://plugins.gradle.org/m2/" }
         google()
         mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
         jcenter()
     }
     dependencies {
@@ -17,24 +17,24 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
-
         classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:$appsync_version"
-
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
-
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.2"
     }
 }
 
-apply plugin: 'io.codearte.nexus-staging'
-
 allprojects {
     repositories {
+        mavenLocal()
         google()
         mavenCentral()
         jcenter()
+    }
+    gradle.projectsEvaluated {
+        tasks.withType(Test) {
+            outputs.upToDateWhen { false } // Force gradle to run unit tests even if everything is up to date
+        }
     }
 }
 
