--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "3.1.0"
+        versionName "3.0.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
@@ -135,17 +135,6 @@ dokka {
     outputDirectory = "$buildDir/javadoc"
 }
 
-// Kotlin Lint
-apply plugin: 'org.jmailen.kotlinter'
-
-kotlinter {
-    ignoreFailures = false
-    reporters = ['checkstyle', 'plain']
-    experimentalRules = false
-    fileBatchSize = 30
-}
-
-
 apply plugin: 'maven'
 
 def props = new Properties()
@@ -164,7 +153,9 @@ ext {
     }
 }
 
-// Internal publishing
-if (project.file("${rootProject.projectDir}/util/publish-internal-android.gradle").exists()) {
-    apply from: "${rootProject.projectDir}/util/publish-internal-android.gradle"
+if (project.hasProperty("tag")) {
+    apply from: "${rootProject.projectDir}/publish-mavencentral.gradle"
+} else {
+    // Snapshot publishing
+    apply from: "${rootProject.projectDir}/publish-snapshot-android.gradle"
 }
