--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
+        classpath "org.jmailen.gradle:kotlinter-gradle:2.1.3"
         classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:$appsync_version"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.2"
@@ -29,6 +30,24 @@ allprojects {
         mavenLocal()
         google()
         mavenCentral()
+        if (project.hasProperty('nexusUsername')) {
+            maven {
+                name = "android-snapshots"
+                url = "https://repo.tools.anonyome.com/repository/android-snapshots/"
+                credentials {
+                    username = nexusUsername
+                    password = nexusPassword
+                }
+            }
+            maven {
+                name = "android-releases"
+                url = "https://repo.tools.anonyome.com/repository/android-releases/"
+                credentials {
+                    username = nexusUsername
+                    password = nexusPassword
+                }
+            }
+        }
         jcenter()
     }
     gradle.projectsEvaluated {
