--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "3.0.7"
+        versionName "3.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
@@ -135,27 +135,40 @@ dokka {
     outputDirectory = "$buildDir/javadoc"
 }
 
+// Kotlin Lint
+apply plugin: 'org.jmailen.kotlinter'
+
+kotlinter {
+    ignoreFailures = false
+    reporters = ['checkstyle', 'plain']
+    experimentalRules = false
+    fileBatchSize = 30
+}
+
+
 apply plugin: 'maven'
 
 def props = new Properties()
 file("../secret.properties").withInputStream { props.load(it) }
 
+// Setup common publishing variables
 ext {
-    PUBLISH_GROUP_ID = 'com.sudoplatform'
-    PUBLISH_ARTIFACT_ID = 'sudoprofiles'
-    PUBLISH_DESCRIPTION = 'Profiles SDK for the Sudo Platform by Anonyome Labs.'
-    PUBLISH_PROJECT_URL = 'https://github.com/sudoplatform/sudo-profiles-android'
-    PUBLISH_PROJECT_SCM = 'scm:git:github.com/sudoplatform/sudo-profiles-android.git'
-    if (project.hasProperty('tag')) {
-        PUBLISH_VERSION = "$tag"
+    projectGroup = 'com.sudoplatform'
+    projectArtifact = project.name
+    projectDescription = 'Profiles SDK for the Sudo Platform by Anonyome Labs.'
+    projectUrl = 'https://github.com/sudoplatform/sudo-profiles-android'
+    projectSCM = 'scm:git:github.com/sudoplatform/sudo-profiles-android.git'
+    if (project.findProperty("tag")) {
+        projectVersion = "$tag"
     } else {
-        PUBLISH_VERSION = "0.0.0"
+        projectVersion = project.android.defaultConfig.versionName
     }
 }
 
-if (project.hasProperty("tag")) {
-    apply from: "${rootProject.projectDir}/publish-mavencentral.gradle"
-} else {
-    // Snapshot publishing
-    apply from: "${rootProject.projectDir}/publish-snapshot-android.gradle"
+if(project.findProperty("tag") &&
+        project.file("${rootProject.projectDir}/util/publish-mavencentral.gradle").exists()) {
+    apply from: "${rootProject.projectDir}/util/publish-mavencentral.gradle"
+}
+else if (project.file("${rootProject.projectDir}/util/publish-internal-android.gradle").exists()) {
+    apply from: "${rootProject.projectDir}/util/publish-internal-android.gradle"
 }
