--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -94,8 +94,10 @@ dependencies {
     testImplementation 'org.powermock:powermock-module-junit4:2.0.7'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.7'
     testImplementation 'org.json:json:20200518'
+    testImplementation 'org.robolectric:robolectric:4.4'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test:monitor:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'com.google.android.gms:play-services-safetynet:17.0.0'
     androidTestImplementation 'com.google.android.gms:play-services-base:17.3.0'
