--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -79,11 +79,11 @@ dependencies {
     implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
     // Sudo Platform
-    implementation 'com.sudoplatform:sudouser:8.0.7'
-    implementation 'com.sudoplatform:sudokeymanager:[3.4.2,)'
+    implementation 'com.sudoplatform:sudouser:[9.0,)'
+    implementation 'com.sudoplatform:sudokeymanager:[3.6.1,)'
     implementation 'com.sudoplatform:sudologging:[1.0,)'
     implementation 'com.sudoplatform:sudoconfigmanager:[1.2.2,)'
-    implementation 'com.sudoplatform:sudoapiclient:[1.4.0,)'
+    implementation 'com.sudoplatform:sudoapiclient:[2.0,)'
 
     // Testing
     testImplementation 'junit:junit:4.13'
