--- a/build.gradle
+++ b/build.gradle
@@ -10,19 +10,18 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
         google()
         mavenCentral()
-        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:4.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "org.owasp:dependency-check-gradle:6.0.1"
+        classpath "org.owasp:dependency-check-gradle:6.1.0"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
         classpath "org.jmailen.gradle:kotlinter-gradle:2.1.3"
         classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:$appsync_version"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.2"
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
         classpath "com.cookpad.android.licensetools:license-tools-plugin:1.7.0"
     }
 }
@@ -52,7 +51,9 @@ allprojects {
                 }
             }
         }
-        jcenter()
+        //  the following line is required to access the dependency
+        //  org.jetbrains.trove4j:trove4j:20160824.
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
     gradle.projectsEvaluated {
         tasks.withType(Test) {
