--- a/sudoprofiles/licenses.yml
+++ b/sudoprofiles/licenses.yml
@@ -298,7 +298,12 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: http://developer.android.com/tools/extras/support-library.html
-- artifact: com.amazonaws:aws-android-sdk-cognitoauth:+
+- artifact: com.amazonaws:aws-android-sdk-cognitoauth:2.22.2
+  name: AWS SDK for Android - Amazon Cognito Auth
+  copyrightHolder: Amazon
+  license: Amazon Software License
+  url: http://aws.amazon.com/sdkforandroid
+- artifact: com.amazonaws:aws-android-sdk-cognitoauth:2.16.12
   name: AWS SDK for Android - Amazon Cognito Auth
   copyrightHolder: Amazon
   license: Apache License, Version 2.0
@@ -351,12 +356,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://developer.android.com/jetpack/androidx
-- artifact: org.jetbrains.kotlinx:kotlinx-coroutines-core:+
-  name: kotlinx-coroutines-core
-  copyrightHolder: JetBrains s.r.o.
-  license: The Apache Software License, Version 2.0
-  licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://github.com/Kotlin/kotlinx.coroutines
 - artifact: androidx.legacy:legacy-support-core-utils:+
   name: Android Support Library core utils
   copyrightHolder: Google, Inc.
@@ -411,40 +410,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://developer.android.com/jetpack/androidx
-- artifact: org.bouncycastle:bcpkix-jdk15on:+
-  name: Bouncy Castle PKIX, CMS, EAC, TSP, PKCS, OCSP, CMP, and CRMF APIs
-  copyrightHolder: The JSR-330 Expert Group
-  license: Bouncy Castle Licence
-  licenseUrl: http://www.bouncycastle.org/licence.html
-  url: http://www.bouncycastle.org/java.html
-- artifact: org.bouncycastle:bcprov-jdk15on:+
-  name: Bouncy Castle Provider
-  copyrightHolder: The JSR-330 Expert Group
-  license: Bouncy Castle Licence
-  licenseUrl: http://www.bouncycastle.org/licence.html
-  url: http://www.bouncycastle.org/java.html
-- artifact: com.babylon.certificatetransparency:certificatetransparency:+
-  name: certificatetransparency
-  copyrightHolder: Babylon Health
-  license: The Apache Software License, Version 2.0
-  url: https://github.com/babylonhealth/certificate-transparency-android
-- artifact: org.bouncycastle:bcprov-jdk15on:+
-  name: Bouncy Castle Provider
-  copyrightHolder: The JSR-330 Expert Group
-  license: Bouncy Castle Licence
-  licenseUrl: http://www.bouncycastle.org/licence.html
-  url: http://www.bouncycastle.org/java.html
-- artifact: com.babylon.certificatetransparency:certificatetransparency-android:+
-  name: certificatetransparency-android
-  copyrightHolder: Babylon Health
-  license: The Apache Software License, Version 2.0
-  url: https://github.com/babylonhealth/certificate-transparency-android
-- artifact: org.bouncycastle:bcpkix-jdk15on:+
-  name: Bouncy Castle PKIX, CMS, EAC, TSP, PKCS, OCSP, CMP, and CRMF APIs
-  license: Bouncy Castle Licence
-  copyrightHolder: The JSR-330 Expert Group
-  licenseUrl: http://www.bouncycastle.org/licence.html
-  url: http://www.bouncycastle.org/java.html
 - artifact: com.squareup.retrofit2:retrofit:+
   name: Retrofit
   copyrightHolder: Square, Inc.
@@ -517,3 +482,56 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://github.com/Kotlin/kotlinx.coroutines
+- artifact: com.appmattus.certificatetransparency:certificatetransparency:+
+  name: com.appmattus.certificatetransparency:certificatetransparency
+  copyrightHolder: Appmattus Limited
+  license: The Apache Software License, Version 2.0
+  licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://github.com/appmattus/certificatetransparency
+- artifact: com.appmattus.certificatetransparency:certificatetransparency-android:+
+  name: com.appmattus.certificatetransparency:certificatetransparency-android
+  copyrightHolder: Appmattus Limited
+  license: The Apache Software License, Version 2.0
+  licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://github.com/appmattus/certificatetransparency
+- artifact: org.jetbrains.kotlin:kotlin-stdlib-jdk8:+
+  name: org.jetbrains.kotlin:kotlin-stdlib-jdk8
+  copyrightHolder: JetBrains, Inc.
+  license: The Apache License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://kotlinlang.org/
+- artifact: org.bouncycastle:bcpkix-jdk15to18:+
+  name: Bouncy Castle PKIX, CMS, EAC, TSP, PKCS, OCSP, CMP, and CRMF APIs
+  copyrightHolder: The JSR-330 Expert Group
+  license: Bouncy Castle Licence
+  licenseUrl: http://www.bouncycastle.org/licence.html
+  url: http://www.bouncycastle.org/java.html
+- artifact: androidx.concurrent:concurrent-futures:+
+  name: AndroidX Futures
+  copyrightHolder: Google
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/topic/libraries/architecture/index.html
+- artifact: org.bouncycastle:bcpkix-jdk15to18:+
+  name: Bouncy Castle PKIX, CMS, EAC, TSP, PKCS, OCSP, CMP, and CRMF APIs
+  copyrightHolder: The JSR-330 Expert Group
+  license: Bouncy Castle Licence
+  licenseUrl: http://www.bouncycastle.org/licence.html
+  url: http://www.bouncycastle.org/java.html
+- artifact: org.bouncycastle:bcprov-jdk15to18:+
+  name: Bouncy Castle Provider
+  copyrightHolder: The JSR-330 Expert Group
+  license: Bouncy Castle Licence
+  licenseUrl: http://www.bouncycastle.org/licence.html
+  url: http://www.bouncycastle.org/java.html
+- artifact: org.bouncycastle:bctls-jdk15to18:+
+  name: Bouncy Castle JSSE provider and TLS/DTLS API
+  copyrightHolder: The JSR-330 Expert Group
+  license: Bouncy Castle Licence
+  licenseUrl: http://www.bouncycastle.org/licence.html
+  url: http://www.bouncycastle.org/java.html
+- artifact: com.google.guava:listenablefuture:+
+  name: Guava ListenableFuture only
+  copyrightHolder: The Guava Authors
+  license: The Apache Software License, Version 2.0
+  url: https://github.com/google/guava
