--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -71,19 +71,14 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     // AWS
-    implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:[2.22,)'
-    implementation 'com.amazonaws:aws-android-sdk-cognitoauth:[2.22,)'
-    implementation 'com.amazonaws:aws-android-sdk-core:[2.22,)'
-    implementation 'com.amazonaws:aws-android-sdk-appsync:[3.1,)'
-    implementation 'com.amazonaws:aws-android-sdk-s3:[2.22,)'
     implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
 
     // Sudo Platform
-    implementation 'com.sudoplatform:sudouser:[9.3.1,)'
-    implementation 'com.sudoplatform:sudokeymanager:[3.7,)'
-    implementation 'com.sudoplatform:sudologging:[1.0,)'
-    implementation 'com.sudoplatform:sudoconfigmanager:[1.2.2,)'
-    implementation 'com.sudoplatform:sudoapiclient:[2.0.1,)'
+    implementation 'com.sudoplatform:sudouser:[9.3.1,10.0.0)'
+    implementation 'com.sudoplatform:sudokeymanager:[3.7.0,4.0.0)'
+    implementation 'com.sudoplatform:sudologging:[1.0.20,2.0.0)'
+    implementation 'com.sudoplatform:sudoconfigmanager:[1.2.2,2.0.0)'
+    implementation 'com.sudoplatform:sudoapiclient:[2.0.1,3.0.0)'
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
