--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.4.30'
-    ext.appsync_version = "3.1.0"
+    ext.appsync_version = "3.1.1"
     ext.aws_version = "2.16.12"
     ext.dokka_version = "1.4.10"
 
@@ -26,34 +26,53 @@ buildscript {
     }
 }
 
+ext {
+    projectGroup = 'com.sudoplatform'
+}
+
 apply plugin: 'io.codearte.nexus-staging'
+nexusStaging {
+    packageGroup = projectGroup
+    stagingProfileId = '14314878e2a1b'
+    numberOfRetries = 50
+}
+
+if(project.file("${rootProject.projectDir}/util/internal-repo.gradle").exists()) {
+    apply from: "${rootProject.projectDir}/util/internal-repo.gradle"
+}
+else {
+    ext["internalRepoUsername"] = ""
+    ext["internalRepoPassword"] = ""
+    ext["internalSnapshotRepoUrl"] = ""
+    ext["internalSnapshotRepoName"] = ""
+    ext["internalReleaseRepoUrl"] = ""
+    ext["internalReleaseRepoName"] = ""
+}
 
 allprojects {
     repositories {
         mavenLocal()
         google()
         mavenCentral()
-        if (project.hasProperty('nexusUsername')) {
+        jcenter() // Needed for Dokka dependencies
+        if (internalRepoUsername?.trim()) {
             maven {
-                name = "android-snapshots"
-                url = "https://repo.tools.anonyome.com/repository/android-snapshots/"
+                name = internalSnapshotRepoName
+                url = internalSnapshotRepoUrl
                 credentials {
-                    username = nexusUsername
-                    password = nexusPassword
+                    username = internalRepoUsername
+                    password = internalRepoPassword
                 }
             }
             maven {
-                name = "android-releases"
-                url = "https://repo.tools.anonyome.com/repository/android-releases/"
+                name = internalReleaseRepoName
+                url = internalReleaseRepoUrl
                 credentials {
-                    username = nexusUsername
-                    password = nexusPassword
+                    username = internalRepoUsername
+                    password = internalRepoPassword
                 }
             }
         }
-        //  the following line is required to access the dependency
-        //  org.jetbrains.trove4j:trove4j:20160824.
-        maven { url 'https://plugins.gradle.org/m2/' }
     }
     gradle.projectsEvaluated {
         tasks.withType(Test) {
