--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
-        versionName "3.1.7"
+        versionName "6.1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
@@ -70,15 +70,20 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
-    // AWS
+    // AWS SDKs
+    //
+    // AWS SDKs do not follow semantic versioning rules so we need to strictly specify AWS SDK versions.
+    // Follow the process at https://anonyome.atlassian.net/wiki/spaces/PLA/pages/840073287/AWS+Android+SDK+versions+to+use+for+platform+SDKs
+    // for updating AWS SDK versions.
     implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
+    implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
 
     // Sudo Platform
-    implementation 'com.sudoplatform:sudouser:[9.3.1,10.0.0)'
-    implementation 'com.sudoplatform:sudokeymanager:[3.7.0,4.0.0)'
-    implementation 'com.sudoplatform:sudologging:[1.0.20,2.0.0)'
-    implementation 'com.sudoplatform:sudoconfigmanager:[1.2.2,2.0.0)'
-    implementation 'com.sudoplatform:sudoapiclient:[2.0.1,3.0.0)'
+    implementation "com.sudoplatform:sudokeymanager:3.7.2"
+    implementation "com.sudoplatform:sudologging:1.0.20"
+    implementation "com.sudoplatform:sudoconfigmanager:1.2.2"
+    implementation "com.sudoplatform:sudouser:9.3.4"
+    implementation "com.sudoplatform:sudoapiclient:2.0.3"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
@@ -214,7 +219,6 @@ file("../secret.properties").withInputStream { props.load(it) }
 
 // Setup common publishing variables
 ext {
-    projectGroup = 'com.sudoplatform'
     projectArtifact = project.name
     projectDescription = 'Profiles SDK for the Sudo Platform by Anonyome Labs.'
     projectUrl = 'https://github.com/sudoplatform/sudo-profiles-android'
