--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -22,7 +22,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
-        versionName "6.2.1"
+        versionName "8.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
@@ -60,8 +60,8 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/java'
         androidTest {
-            resources.srcDirs += ['/var/anonyome_key', '../identity-system-test-config']
-            assets.srcDirs += ['../identity-system-test-config']
+            resources.srcDirs += ['../config']
+            assets.srcDirs += ['../config']
         }
     }
 }
@@ -84,13 +84,18 @@ dependencies {
     // for updating AWS SDK versions.
     implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
+    constraints {
+        implementation("com.squareup.okhttp3:okhttp:4.9.3") {
+            because("Versions < 4.9.3 has CVE-2021-0341")
+        }
+    }
 
     // Sudo Platform
-    implementation "com.sudoplatform:sudokeymanager:3.8.0"
-    implementation 'com.sudoplatform:sudologging:1.2.0'
-    implementation "com.sudoplatform:sudoconfigmanager:2.0.0"
-    implementation "com.sudoplatform:sudouser:11.0.0"
-    implementation 'com.sudoplatform:sudoapiclient:3.0.0'
+    implementation "com.sudoplatform:sudokeymanager:4.0.0"
+    implementation 'com.sudoplatform:sudologging:1.3.1'
+    implementation "com.sudoplatform:sudoconfigmanager:2.1.0"
+    implementation "com.sudoplatform:sudouser:11.2.0"
+    implementation 'com.sudoplatform:sudoapiclient:3.1.0'
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
@@ -98,18 +103,18 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation 'org.mockito:mockito-core:3.12.4'
-    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
     testImplementation 'org.json:json:20220320'
-    testImplementation 'org.robolectric:robolectric:4.6.1'
+    testImplementation 'org.robolectric:robolectric:4.8.1'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
-    androidTestImplementation 'androidx.test:monitor:1.4.0'
+    androidTestImplementation 'androidx.test:monitor:1.5.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'com.google.android.gms:play-services-safetynet:17.0.1'
     androidTestImplementation 'com.google.android.gms:play-services-base:17.6.0'
-    androidTestImplementation "com.sudoplatform:sudoentitlements:2.3.0"
+    androidTestImplementation "com.sudoplatform:sudoentitlements:3.1.0"
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
