--- a/sudoprofiles/licenses.yml
+++ b/sudoprofiles/licenses.yml
@@ -435,12 +435,12 @@
   license: Android Software Development Kit License
   licenseUrl: https://developer.android.com/studio/terms.html
   url: https://developers.google.com/android/guides/releases
-- artifact: androidx.constraintlayout:constraintlayout-solver:+
-  name: Android ConstraintLayout Solver
+- artifact: androidx.constraintlayout:constraintlayout-core:+
+  name: Android ConstraintLayout Core
   copyrightHolder: Google, Inc.
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/jetpack/androidx
+  url: http://tools.android.com
 - artifact: com.google.android.gms:play-services-safetynet:+
   name: play-services-safetynet
   copyrightHolder: Google, Inc.
