--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -16,13 +16,13 @@ node {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 30
+        minSdkVersion 24
+        targetSdkVersion 31
         versionCode 1
-        versionName "8.1.0"
+        versionName "9.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
@@ -67,7 +67,7 @@ android {
 }
 
 ext {
-    coroutine_version = '1.6.0-native-mt'
+    coroutine_version = '1.6.4'
     kotlintest_version = "3.4.2"
 }
 
@@ -76,6 +76,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutine_version}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${coroutine_version}"
+    implementation 'androidx.core:core-ktx:1.6.0'
 
     // AWS SDKs
     //
@@ -91,11 +92,11 @@ dependencies {
     }
 
     // Sudo Platform
-    implementation "com.sudoplatform:sudokeymanager:4.0.0"
-    implementation 'com.sudoplatform:sudologging:1.3.1'
-    implementation "com.sudoplatform:sudoconfigmanager:2.1.0"
-    implementation "com.sudoplatform:sudouser:11.2.0"
-    implementation 'com.sudoplatform:sudoapiclient:3.1.0'
+    implementation "com.sudoplatform:sudokeymanager:5.0.0"
+    implementation 'com.sudoplatform:sudologging:2.0.1'
+    implementation "com.sudoplatform:sudoconfigmanager:3.0.1"
+    implementation "com.sudoplatform:sudouser:12.0.1"
+    implementation 'com.sudoplatform:sudoapiclient:4.0.0'
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
@@ -107,14 +108,14 @@ dependencies {
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
     testImplementation 'org.json:json:20220320'
-    testImplementation 'org.robolectric:robolectric:4.8.1'
+    testImplementation 'org.robolectric:robolectric:4.8.2'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation 'androidx.test:monitor:1.5.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'com.google.android.gms:play-services-safetynet:17.0.1'
     androidTestImplementation 'com.google.android.gms:play-services-base:17.6.0'
-    androidTestImplementation "com.sudoplatform:sudoentitlements:3.1.0"
+    androidTestImplementation "com.sudoplatform:sudoentitlements:4.0.0"
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
