--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -95,7 +95,7 @@ dependencies {
     implementation "com.sudoplatform:sudokeymanager:5.0.0"
     implementation 'com.sudoplatform:sudologging:2.0.1'
     implementation "com.sudoplatform:sudoconfigmanager:3.0.1"
-    implementation "com.sudoplatform:sudouser:12.0.1"
+    implementation 'com.sudoplatform:sudouser:12.0.2'
     implementation 'com.sudoplatform:sudoapiclient:4.0.0'
 
     // Testing
@@ -108,7 +108,7 @@ dependencies {
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
     testImplementation 'org.json:json:20220320'
-    testImplementation 'org.robolectric:robolectric:4.8.2'
+    testImplementation 'org.robolectric:robolectric:4.9'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation 'androidx.test:monitor:1.5.0'
