--- a/sudoprofiles/build.gradle
+++ b/sudoprofiles/build.gradle
@@ -20,7 +20,7 @@ android {
     compileSdkVersion 31
 
     defaultConfig {
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 31
         versionCode 1
         versionName "10.0.0"
@@ -75,6 +75,13 @@ android {
             assets.srcDirs += ['../config']
         }
     }
+
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 ext {
@@ -98,10 +105,10 @@ dependencies {
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
 
     // Sudo Platform
-    implementation 'com.sudoplatform:sudokeymanager:5.2.1'
-    implementation 'com.sudoplatform:sudologging:2.1.0'
-    implementation 'com.sudoplatform:sudoconfigmanager:5.0.0'
-    implementation 'com.sudoplatform:sudouser:16.0.0'
+    implementation 'com.sudoplatform:sudokeymanager:6.0.0'
+    implementation 'com.sudoplatform:sudologging:3.0.0'
+    implementation 'com.sudoplatform:sudoconfigmanager:6.0.0'
+    implementation 'com.sudoplatform:sudouser:17.0.0'
     implementation 'com.sudoplatform:sudoapiclient:7.0.0'
 
     // Testing
@@ -180,6 +187,14 @@ afterEvaluate {
             urlBase = "https://anonyome-nist-cve-mirror.s3.amazonaws.com/nvdcve-1.1-%d.json.gz"
             startYear = 2002
             waitTime = 0
+        }
+        analyzers {
+            assemblyEnabled = false
+            ossIndex {
+                username = "${ossIndexUsername}"
+                password = "${ossIndexPassword}"
+                warnOnlyOnRemoteErrors = true
+            }
         }
     }
 }
